--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>GM Home Page</title>
   </head>
   <body>
-    <h1>GMena</h1>
+    <h1>GMena 123</h1>
     <h2>Guillermo</h2>
   </body>
 </html>
